<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    Wikipage Article Preferences -->

    <PreferenceCategory app:title="@string/wikipedia_article_header">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:foregroundTint="#FFFFFF"
            android:soundEffectsEnabled="true"
            app:defaultValue="true"
            app:icon="@drawable/image_icon"
            app:key="articleImage"
            app:title="Show cover image when entering a wikipedia article" />

    </PreferenceCategory>

<!--    Audio Preferences -->

    <PreferenceCategory app:title="@string/audio_header">
        <ListPreference
            android:defaultValue="false"
            android:entries="@array/audio_speed_entries"
            android:entryValues="@array/audio_speed_values"
            android:key="audio_speed"
            android:title="Audio Speed"
            app:icon="@drawable/audio_wave_icon" />
    </PreferenceCategory>


<!--    Location Preferences -->
    <PreferenceCategory app:title="@string/map_header">

        <SwitchPreference
            android:defaultValue="true"
            android:key="show_map"
            android:title="Show Map"
            app:defaultValue="true"
            app:icon="@android:drawable/ic_menu_mapmode" />
    </PreferenceCategory>


<!--    Storage Preferences -->

    <PreferenceCategory app:title="@string/storage_header">
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/upload"
            android:key="delete_audio_files"
            android:title="Delete audio files after upload to wikipeda"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/privacy_policy_header">
        <Preference
            android:key="privacy_policy"
            android:icon="@drawable/privacy_policy_icon"
            app:title="@string/privacy_policy_header" />
    </PreferenceCategory>



</PreferenceScreen>